added jpg, updated html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,11 @@ p {
 	border: 1px dashed black;
 }
 
-button {
-
+img {
+	width: 150px;
+	position: relative;
+	top: 70px;
+	left: 400px;
 }
 
 #container {
